# DBGlib

./: .gitmodules  CMakeLists.txt  Questions.md  README.md  TODO.md
app/: CMakeLists.txt  main.cpp
app/rsqf/: CMakeLists.txt  rsqf.cpp
lib/: CMakeLists.txt  config.hpp.in
lib/include/algorithms/: SkmerSorting.hpp
lib/include/dbg/datastruct/: PackedArray.hpp  QF.hpp  RSQF.hpp  RSQFManager.hpp  Teo.hpp  bitvector.hpp  chatgpt.hpp  quotienting.hpp
lib/include/io/: Kmer.hpp  KmerStream.hpp  Kmerator.hpp  Skmer.hpp  Skmerator.hpp
lib/include/skmer/: SkmerSorting.hpp
lib/src/datastruct/: PackedArray.cpp  QF.cpp
tests/: CMakeLists.txt  kmerator.cpp  kmerstream.cpp  main.cpp  packedblock.cpp  qf.cpp  quotienting.cpp  rsqf.cpp
tests/data/: CCCCAAAAA.fa  fasta0.fa  fasta1.fa  fasta2.fa
tests/datastruct/: QF_Manager.cpp  bitvector.cpp  packedblock.cpp  quotienting.cpp  rsqf.cpp
tests/km/: SortedSkmer.cpp  kmer.cpp  kmerator.cpp  skmer.cpp  skmerator.cpp
